recursion.cons.nfirst.Nfirst.scala.error
Erreur de compilation :
Nfirst:4: error: not found: value rang
  if(rang > n-1){
     ^Nfirst:10: error: too many arguments for method nfirst: (l: List[Int], n: Int)List[Int]
    return nfirst(l.tail, n, rang+1);
                 ^