recursion.cons.nfirst.Nfirst.scala.code
def nfirst(l:List[Int], n:Int): List[Int] = {
  
  if(rang > n-1){
      
  	return Nil;
      
  } else{
      
  	return nfirst(l.tail, n, rang+1);
      
  }
  
}